--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -45,8 +45,10 @@ nav{
 
 .dropdown:hover .dropdown-menu {
     display: block;
+    color: black;
 }
 
 .dropdown-item:hover{
     background-color: rgb(134, 0, 0);
+    color: white;
 }
