--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,5 +1,15 @@
+:root {
+    --auburn: rgb(160, 36, 36);
+    --fireEngine: rgb(187, 54, 40);
+    --imperialRed: rgb(231, 46, 53);
+    --xanthous: rgb(234, 180, 9);
+    --saffron: rgb(239, 201, 65);
+    --platinum: rgb(233, 227, 227);
+    --licorice: rgb(35, 24, 21);
+  }
+
 body{
-    background-color:rgb(255, 243, 240);
+    background-color:white
 }
 
 nav{
@@ -40,7 +50,7 @@ nav{
 }
 
 .dropdown-menu{
-    background-color: rgb(228, 195, 112);   
+    background-color: var(--xanthous)   
 }
 
 .dropdown:hover .dropdown-menu {
@@ -49,6 +59,6 @@ nav{
 }
 
 .dropdown-item:hover{
-    background-color: rgb(134, 0, 0);
+    background-color: var(--fireEngine);
     color: white;
 }
