--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -92,7 +92,7 @@ h1:after {
 
 .container div div p {
   padding-left: 10px;
-  border-left: 5px solid var(--auburn);
+  border-left: 3px solid var(--auburn);
 }
 
 .dropdown-menu {
@@ -189,17 +189,17 @@ h1:after {
 
 @media (min-width: 1199.98px) {
   .storeItem div {
-    margin-bottom: 32%;
+    margin-bottom: 45vh;
   }
 
   .storeItem div div {
     position: absolute;
-    width: 8%;
+    width: 10%;
     transition: 0.2s;
   }
 
   .storeItem div div:hover {
-    width: 10%;
+    width: 12%;
     position: absolute;
     transform: translate(-10%, -10%);
 
