--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -91,13 +91,23 @@ tr p{
 
 }
 
+.parallaxVid{
+  pointer-events: none;
+  position: absolute;
+  left: 50%;
+}
+
 .parallaxInner {
-  width: auto;
-  margin-right: auto; 
-  margin-left: auto;
-  padding: 100px;
-  margin-top: 150px;
-  color: white;
+  position: absolute;
+  background-color: rgba(160, 36, 36, 0.497);
+  width: 100%;
+  text-align: center;
+font-size: 2.5em;
+top: 100%;
+left: 50%;
+transform: translate(-50%,-100%);
+
+  color: rgb(255, 255, 255);
 }
 
 .container div div p {
