--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -317,3 +317,18 @@ transform: translate(-50%,-100%);
   margin:0%;
   padding:0%;
 }
+
+.pdf-dl{
+  background-color: rgba(88, 88, 88, 0);
+}
+
+.pdf-dl :hover {
+  background-color: rgba(88, 88, 88, 0.678);
+}
+.pdf-dl>a{
+  text-decoration: none;
+  color: var(--licorice);
+}
+.pdf-dl>a :hover{
+  background-color: rgba(88, 88, 88, 0);
+}
