--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -332,3 +332,11 @@ transform: translate(-50%,-100%);
 .pdf-dl>a :hover{
   background-color: rgba(88, 88, 88, 0);
 }
+
+.navbar .navbar-collapse .navbar-nav li .nav-link{
+  color: rgba(255, 255, 255, 0.863) ;
+}
+
+.navbar .navbar-collapse .navbar-nav li:hover .nav-link {
+  color: rgba(255, 255, 255, 0.356) ;
+}
